--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,14 @@ header {
   flex-direction: column;
   align-items: center;
 }
-
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.body-container {
+  flex: 1;
+}
 .container {
   max-width: 1100px;
   margin: auto;
@@ -123,7 +130,7 @@ input[type="text"] {
   height: 300px;
   perspective: 1000px;
 }
- 
+
 .card h1 {
   font-size: 25px;
   border-bottom: 1px #fff solid;
@@ -173,8 +180,7 @@ input[type="text"] {
 .social-container {
   display: flex;
   justify-content: center;
-  position: fixed;
-  bottom: 0;
+  margin-top: auto;
   width: 100%;
   height: 60px;
 }
@@ -187,14 +193,17 @@ input[type="text"] {
   margin: 10px;
 }
 
-@media (max-width: 800px) {
+@media only screen and (min-width: 500px) and (max-width: 800px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
     margin: 30px;
   }
+  .card-back {
+    font-size: 15px;
+  }
 }
 
-@media (max-width: 500px) {
+@media only screen and (min-width: 320px) and (max-width: 500px) {
   .cards {
     grid-template-columns: 1fr;
   }
@@ -202,5 +211,26 @@ input[type="text"] {
     width: 100%;
     height: 300px;
     object-fit: contain;
+  }
+  .card-back h1 {
+    font-size: 18px;
+  }
+  .card-back,
+  .card-front {
+    font-size: 15px;
+    height: 100%;
+    width: 100%;
+  }
+  .btn {
+    padding: 8px 8px;
+    border: 0;
+    margin: 10px 0;
+  }
+  .search input {
+    font-size: 1, 5em;
+  }
+  .favorite-text {
+    font-size: 20px;
+    margin-top: 0px;
   }
 }
